chapter-10/cluster-apk8s-eth/003-data/200-eth/30-ethstats/30-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eth-ethstats
  namespace: data
  labels:
    app: eth-ethstats
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: eth-ethstats
  template:
    metadata:
      labels:
        app: eth-ethstats
    spec:
      containers:
        - name: ethstats
          image: ethereumex/eth-stats-dashboard:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
