chapter-10/cluster-apk8s-eth/003-data/200-eth/30-ethstats/10-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eth-ethstats
  namespace: data
  labels:
    app: eth-ethstats
spec:
  selector:
    app: eth-ethstats
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
